# Leo

./: AGENT.md  Cargo.toml  README.md
.github/workflows/: release.yml
chrome_extension/: background.js  content.js  manifest.json  onboarding.html  popup.html  popup.js
docs/: ARCHITECTURE.md  EXTENDING.md  MIGRATION_PLAN.md  MODULE_MAP.md  TESTING.md
src/: config.rs  error.rs  lib.rs  main.rs  templates.rs  ui.rs
src/adapters/: cli.rs  mod.rs  telegram.rs
src/agent/: context.rs  gemini.rs  gemini_oauth.rs  llm.rs  loop_impl.rs  message.rs  mod.rs  tokens.rs
src/agent/llm/: gemini.rs  gemini_oauth.rs  mod.rs  types.rs
src/auth/: callback_server.rs  cli_extractor.rs  credentials.rs  mod.rs  pkce.rs  provider.rs
src/memory/: mod.rs
src/skills/: mod.rs
src/tools/: browser_bridge.rs  edit.rs  filesystem.rs  find.rs  git.rs  memory.rs  mod.rs  runner.rs  search.rs  shell.rs  task.rs  web.rs
templates/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
