[package]
name = "leo"
version = "0.1.1"
edition = "2021"
authors = ["Leo contributors"]
description = "Ultra-lightweight personal AI assistant named Leo"
license = "MIT"
keywords = ["ai", "agent", "chatbot", "llm"]

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP client (for Gemini API)
reqwest = { version = "0.11", features = ["json"] }

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5.0"

# OAuth2 PKCE cryptography
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"

# URL handling
url = "2.5"

# Browser opening
open = "5.0"

# Regex for credential extraction
regex = "1.10"
uuid = { version = "1.20.0", features = ["v4"] }

ctrlc = "3.4"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"

# UI and Interactivity
colored = "2.0"
inquire = "0.7"
indicatif = "0.17"
terminal_size = "0.3"
whoami = "1.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "leo"
path = "src/main.rs"

[lib]
name = "leo"
path = "src/lib.rs"
